homepage fixes - added spacing for mobile on logos and featured industries

--- a/fls_2019/assets/src/sass/partials/_home.scss
+++ b/fls_2019/assets/src/sass/partials/_home.scss
@@ -126,9 +126,7 @@ html {
 										}
 										@media(max-width: 786px) {	
 											border-bottom: 5px solid $alternate;
-											&:nth-of-type(odd) {
-												border-right: 5px solid $alternate;
-											}
+											border-right: 5px solid $alternate;
 										}
 									}									
 								}
@@ -149,9 +147,7 @@ html {
 							&.item {
 								@media(max-width: 786px) {	
 									border-bottom: 5px solid $alternate;
-									&:nth-of-type(odd) {
-										border-right: 5px solid $alternate;
-									}
+									border-right: 5px solid $alternate;
 								}								
 							}
 						}
